<resources>
    <!-- CATEGORY -->
    <string name="app_name">tei-learning</string>
    <string name="categories">Κατηγορίες</string>
    <string name="search">Αναζήτηση</string>
    <string name="failed">Αποτυχία εκκίνησης Youtube Player.</string>
    <string name="math">Μαθηματικά</string>
    <string name="comp">Επιστήμη Υπολογιστών</string>
    <string name="phyc">Φυσική</string>
    <string name="chem">Χημεία</string>
    <!-- COMP -->
    <string name="glossesprog">Γλώσσες Προγραμματισμού</string>
    <string name="glossesshm">Γλώσσες Σήμανσης</string>
    <string name="databses">Βάσεις Δεδομένων</string>
    <string name="networks">Δίκτυα</string>
    <!-- prog -->
    <string name="cpp">C++</string>
    <string name="java">Java</string>
    <string name="html">HTML</string>
    <string name="xml">XML</string>
    <!-- net -->
    <string name="lan">LAN</string>
    <string name="man">MAN</string>
    <string name="wan">WAN</string>
    <!-- data -->
    <string name="sql">SQL</string>
    <string name="mysql">MySql</string>
    <string name="postgresql">PostgreSQL</string>
    <string name="sparql">SPARQL</string>
    <!-- markup -->
    <string name="python">Python</string>
    <string name="php">PHP</string>
    <string name="css">CSS</string>
    <string name="xaml">XAML</string>
    <!-- CHEM -->
    <string name="organic">Οργανική Χημεία</string>
    <string name="analitic">Αναλυτική Χημεία</string>
    <string name="phychem">Φυσικοχημεία</string>
    <string name="biochem">Βιοχημεία</string>
    <string name="enorganic">Ανόργανη Χημεία</string>
    <!-- PHYC -->
    <string name="classic">Κλασική Φυσική</string>
    <string name="newage">Σύγχρωνη Φυσική</string>
    <!-- classic -->
    <string name="classicP1">Kλασική Μηχανική</string>
    <string name="classicP2">Ηλεκτρομαγνητισμός</string>
    <string name="classicP3">Θερμοδυναμική</string>
    <string name="classicP4">Οπτική</string>
    <!-- new age -->
    <string name="newageP1">Κβαντική μηχανική</string>
    <string name="newageP2">Σωματιδιακή φυσική</string>
    <string name="newageP3">Ατομική φυσική</string>
    <string name="newageP4">Πυρηνική φυσική</string>
    <string name="newageP5">Κοσμολογία</string>
    <string name="newageP6">Φυσική της συμπυκνωμένης ύλης</string>
    <!-- MATH -->
    <string name="diaforikos">Διαφορικός Λογισμός</string>
    <string name="oloklirotikos">Ολοκληρωτικός Λογισμός</string>
    <string name="diakrita">Διακριτκά Μαθηματικά</string>
    <string name="pinakes">Πίνακες</string>
</resources>
