<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtView_category"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/chem"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textColor="@color/colorText"
        android:layout_marginTop="20dp"
        />

    <LinearLayout
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/btnChem1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:text="@string/organic"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnChem2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:text="@string/analitic"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/btnChem3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:text="@string/phychem"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnChem4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:text="@string/biochem"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/btnChem5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:text="@string/enorganic"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>