<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtView_category"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="32sp"
        android:text="@string/glossesshm" />

    <LinearLayout
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/btnJava"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:textAllCaps="false"
            android:textSize="19sp"
            android:textStyle="bold"
            android:text="@string/html" />

        <Button
            android:id="@+id/btnC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/xml" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/btnPython"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:textAllCaps="false"
            android:textSize="19sp"
            android:textStyle="bold"
            android:text="@string/css" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/xaml" />
    </LinearLayout>



</LinearLayout>